<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yodle.testingdemocomplete.activity.LoginActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/headline_leading_space"
        android:textSize="@dimen/headline_font"
        android:text="@string/app_name"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/body_1_font"
        android:hint="@string/login_prompt_email"
        android:textColorHint="@color/theme_supplemental_gray"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/body_1_leading_space"
        android:textSize="@dimen/body_1_font"
        android:hint="@string/login_prompt_password"
        android:textColorHint="@color/theme_supplemental_gray"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/body_1_font"
        android:layout_marginTop="@dimen/body_1_leading_space"
        android:text="@string/action_sign_in_short"
        android:padding="@dimen/default_material_padding_half"
        android:gravity="center"/>

    <Button
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/body_1_font"
        android:layout_marginTop="@dimen/body_1_leading_space"
        android:text="@string/action_register_short"
        android:padding="@dimen/default_material_padding_half"
        android:gravity="center"/>

</LinearLayout>

